--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to My Website</title>
+  <meta charset="UTF-8" />
+  <title>Tailwind CDN</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body style="font-family: Arial; text-align: center; margin: 40px;">
-  <h1>Hello, Gerry 👋</h1>
-  <p>This website is hosted for free using GitHub Pages.</p>
-  <p>Created by <strong>Erica</strong></p>
+<body class="bg-gray-100 flex items-center justify-center h-screen">
+
+  <h1 class="text-4xl font-bold text-blue-600">
+    Hello Gerard 👋
+  </h1>
+
 </body>
 </html>
